Fixing margin spacing on settingspage
https://github.com/memberapp/memberapp.github.io/issues/52

--- a/css/functional.css
+++ b/css/functional.css
@@ -200,3 +200,11 @@ pre { max-width: 900px; }
 .leaflet-popup-content-wrapper {
   background-color:#f6f6ef;
 }
+
+#memberposts{
+  color:red;margin-left: 15px;
+}
+
+#settings{
+  color:red;margin-left: 15px;
+}
